# c-forth-call

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  foo.c  foo.h  main.c
examples/: main.c
src/: custom.c
